tests/purs/failing/CoercibleRepresentational5.out
Error found:
in module [33mMain[0m
at tests/purs/failing/CoercibleRepresentational5.purs:15:38 - 15:44 (line 15, column 38 - line 15, column 44)

  No type class instance was found for
  [33m                              [0m
  [33m  Prim.Coerce.Coercible Int   [0m
  [33m                        String[0m
  [33m                              [0m

while solving type class constraint
[33m                                                                   [0m
[33m  Prim.Coerce.Coercible (MutuallyRecursiveRepresentational2 Int)   [0m
[33m                        (MutuallyRecursiveRepresentational2 String)[0m
[33m                                                                   [0m
while checking that type [33mforall (a :: Type) (b :: Type). Coercible @Type a b => a -> b[0m
  is at least as general as type [33mMutuallyRecursiveRepresentational2 Int -> MutuallyRecursiveRepresentational2 String[0m
while checking that expression [33mcoerce[0m
  has type [33mMutuallyRecursiveRepresentational2 Int -> MutuallyRecursiveRepresentational2 String[0m
in value declaration [33mrepresentationalToRepresentational[0m

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

